# dok-klaim-fe

./: main.py  pyproject.toml
src/: client.py  history.py  input.py  render.py  session.py
src/client/: client.py
src/config/: config.py
src/core/: render.py  session.py
src/pages/: __init__.py
src/pages/all_rules_page/: all_rules_page.py  client.py  render.py  schema.py  session.py
src/pages/single_rule_page/: client.py  render.py  schema.py  session.py  single_rule_page.py
src/schema/: __init__.py  model.py  schema.py
src/utils/: render.py  session.py
