[project]
name = "dok-klaim-fe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "python-multipart>=0.0.20",
    "streamlit>=1.51.0",
]
